bootstrap/hub/argocd-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: default
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 8080 # <--- AGGIUNGI O CAMBIA IN 8080
